--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="font-mono">
+<html lang="en" class="font-mono text-white">
   <head>
     <meta charset="UTF-8" />
 
@@ -10,7 +10,7 @@
     
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ansible Web</title>
+    <title>Ansible Web Trigger</title>
   </head>
   <body>
     <div id="root" class="h-screen w-screen flex items-center justify-center"></div>
