--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="font-mono text-white">
+<html lang="en" class="bg-[#f3fcfd] font-mono text-white">
   <head>
     <meta charset="UTF-8" />
 
@@ -13,7 +13,7 @@
     <title>Ansible Web Trigger</title>
   </head>
   <body>
-    <div id="root" class="h-screen w-screen flex items-center justify-center"></div>
+    <div id="root" class="h-screen w-screen flex items-center"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
